# payload-ai-suite

./: .gitignore  CMakeLists.txt  README.md  SpectralSuite.cpp  analyze.py  cloud.py  cloud_mask.onnx  cloud_model.py  cloud_onnx_export.py  fetch.py  main.py  mlops.py  model.py  preprocess.py  pyproject.toml  requirements.txt
progress_counter/: eonet.json
