[project]
name = "payload-ai-suite"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-storage==2.18.2",
    "google-genai>=1.24.0",
    "keras==3.7.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "oauthlib==3.2.0",
    "onnx==1.17.0",
    "onnxruntime==1.20.1",
    "opencv-python>=4.11.0.86",
    "pandas==2.2.3",
    "pygeohash==3.0.1",
    "pyproj==3.7.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "scikit-learn==1.6.1",
    "selenium==4.32.0",
    "tensorflow==2.18.0",
    "tf2onnx==1.16.1",
]
